# otus-cpp

./: .gitignore  .travis.yml  readme.md
01_hello/: CMakeLists.txt  main.cpp  version.cpp  version.h  version_def.h.in  version_test.cpp
02_ip_filter/: CMakeLists.txt  ip_filter.h  ip_out.h  main.cpp  split.h
02_ip_filter/tests/: CMakeLists.txt  filter_any_test.cpp  filter_test.cpp  out_test.cpp  split_test.cpp
03_allocator/: CMakeLists.txt  TODO  allocator.h  list.h  main.cpp  newdelete.cpp  newdelete.h  readme.md
03_allocator/tests/: CMakeLists.txt  allocator_memory_leak_test.cpp  allocator_test.cpp  list_test.cpp
04_print_ip/: CMakeLists.txt  TODO  main.cpp  meta_tuple.h  print_ip.h
04_print_ip/tests/: CMakeLists.txt  print_ip_char_test.cpp  print_ip_conteiner_test.cpp  print_ip_int_test.cpp  print_ip_long_test.cpp  print_ip_short_test.cpp  print_ip_string_test.cpp  print_ip_tuple_test.cpp
05_graph/: CMakeLists.txt  TODO  document.h  figures.h  main.cpp  readme  screen.h  user.h
05_graph/tests/: CMakeLists.txt  database_test.cpp  document_test.cpp  draw_test.cpp  file_test.cpp
06_matrix/: CMakeLists.txt  TODO  homework.h  main.cpp  matrix.h  readme
06_matrix/tests/: CMakeLists.txt  bad_ptr_test.cpp  homework_test.cpp  matrix_test.cpp  speed_test.cpp  types_test.cpp
07_bulk/: CMakeLists.txt  TODO  main.cpp  parser.h  readme
07_bulk/tests/: CMakeLists.txt  additional_parser_test.cpp  cout_test.cpp  exporter_test.cpp  file_test.cpp  homework_test.cpp
10_bulkmt/: CMakeLists.txt  TODO  main.cpp  parser.h  readme  threadpool.h  threadsubs.h
10_bulkmt/tests/: CMakeLists.txt  additional_parser_test.cpp  benchmark_test.cpp  cout_test.cpp  cpu_load.h  cpu_load_test.cpp  efficiency_test.cpp  exporter_test.cpp  file_test.cpp  homework_test.cpp  out_of_memory_test.cpp  thread_test.cpp
11_async/: CMakeLists.txt  TODO  async.cpp  async.h  async_wrapper.h  main.cpp  object_pool.h  readme  test4  test4.cpp
11_async/otus10/: parser.h  threadpool.h
11_async/tests/: CMakeLists.txt  multi_thread_async_test.cpp  multi_thread_recieve_test.cpp  random_in_size_test.cpp
12_bulk_server/: CMakeLists.txt  bulk_server.h  bulk_session.h
12_bulk_server/otus10/: parser.h  threadsubs.cpp
12_bulk_server/tests/: bulk_server_test.cpp
12_bulkserver/: main.cpp  readme
12_bulkserver/otus10/: threadsubs.h
12_bulkserver/tests/: CMakeLists.txt  bulk_session_test.cpp
13_joinserver/: CMakeLists.txt  database.h  database_worker.h  main.cpp  readme  server.h  session.h
13_joinserver/otus12/: threadpool.h
13_joinserver/tests/: CMakeLists.txt  error_test.cpp  homework_test.cpp  many_connection_test.cpp
14_yamr/: CMakeLists.txt  functions.h  main.cpp  map_reduce.h  readme  split.h
14_yamr/tests/: 01_split_test.cpp  02_mapper_test.cpp  03_reducer_test.cpp  04_homework_test.cpp  CMakeLists.txt
